--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -103,12 +103,24 @@ footer {
 .invert p {
 	margin-left: 50px;
 	margin-right: 50px;
+	font-size: 17px;
+}
+
+.invert h2 {
 	font-size: 20px;
+}
+
+.invert h3 {
+	font-size: 18px;
 }
 
 .homepage p {
 	margin-left: 50px;
 	margin-right: 50px;
+	font-size: 17px;
+}
+
+.homepage h2 {
 	font-size: 20px;
 }
 
@@ -118,5 +130,9 @@ footer {
 
 .jumbotron h1 {
 	margin-top: 50px;
-	font-size: 32px;
+	font-size: 25px;
+}
+
+.jumbotron p {
+	font-size: 17px;
 }
